@@ -23,11 +23,6 @@ import org.openelisglobal.common.services.IStatusService;
 import org.openelisglobal.common.services.StatusService.SampleStatus;
 import org.openelisglobal.notebook.dao.NotebookPageSampleDAO;
 import org.openelisglobal.notebook.form.VirologyLabManifestImportForm;
-import org.openelisglobal.notebook.service.NoteBookService;
-import org.openelisglobal.notebook.service.VirologyLabManifestImportService.VirologyLabManifestImportResult;
-import org.openelisglobal.notebook.service.VirologyLabManifestImportService.ManifestRow;
-import org.openelisglobal.notebook.service.VirologyLabManifestImportService.ParseError;
-import org.openelisglobal.notebook.service.VirologyLabManifestImportService.ParsedManifest;
 import org.openelisglobal.notebook.valueholder.NoteBook;
 import org.openelisglobal.notebook.valueholder.NoteBookPage;
 import org.openelisglobal.notebook.valueholder.NotebookEntry;
@@ -45,7 +40,7 @@ import org.openelisglobal.sample.util.AccessionNumberHandler;
 
 /**
  * VirologyLab (Virology Laboratory) manifest import implementation.
- *
+ * <p>
  * Parses VirologyLab-specific CSV, creates samples + sample items, links to notebook
  * entry, and stores reception and processing metadata on page 1
  * NotebookPageSample in JSONB format for flexible virology data storage.
@@ -78,8 +73,31 @@ public class VirologyLabManifestImportServiceImpl implements VirologyLabManifest
     private EntityManager entityManager;
 
     private static final Set<String> VALID_VIROLOGY_SAMPLE_TYPES = Set.of(
-        "DNA", "RNA", "cDNA", "Tissue", "Swab", "Blood", "Serum", "Plasma",
-        "Viral Isolate", "Cell Culture", "PCR Product", "Library", "Other"
+            // DNA samples
+            "dna", "dna - genomic", "dna - plasmid", "dna - cdna", "dna - pcr product", "pcr product",
+
+            // RNA samples
+            "rna", "rna - total", "rna - mrna", "rna - ncrna", "rna - mirna", "rna - rrna",
+
+            // cDNA samples
+            "cdna", "cdna - first strand", "cdna - double strand", "cdna - library",
+
+            // Genomic materials
+            "whole blood", "saliva", "buccal swab", "tissue", "hair follicle", "nail", "cultured cells",
+            "bacterial culture", "viral lysate",
+
+            // Quality control samples
+            "positive control", "negative control", "reference standard", "quality control sample",
+
+            // Library preparation intermediates
+            "fragmented dna", "adapter-ligated dna", "pcr-amplified library", "size-selected library",
+
+            // Sequencing samples
+            "sequencing library", "sequencing-ready sample", "pooled sample",
+
+            // Other genomic materials
+            "germ line dna", "somatic dna", "cfna - circulating nucleic acids", "environmental sample",
+            "other genomic material"
     );
 
     @Override
@@ -102,24 +120,77 @@ public class VirologyLabManifestImportServiceImpl implements VirologyLabManifest
         try (BufferedReader reader = new BufferedReader(
                 new InputStreamReader(inputStream, StandardCharsets.UTF_8))) {
 
-            String line;
-            int rowNumber = 0;
-            boolean isHeaderRow = true;
+            String headerLine = reader.readLine();
+            if (headerLine == null || headerLine.isBlank()) {
+                errors.add(new ParseError(0, "file", "CSV file is empty or has no header row"));
+                return new ParsedManifest(rows, errors);
+            }
 
+            String[] headers = parseCSVLine(headerLine);
+            Map<String, Integer> columnIndex = new HashMap<>();
+            for (int i = 0; i < headers.length; i++) {
+                columnIndex.put(headers[i].trim().toLowerCase(), i);
+            }
+
+            // Required field indices
+            Integer sampleIdIdx = getColumnIndex(columnIndex, form.getSampleIdColumn());
+            Integer sampleTypeIdx = getColumnIndex(columnIndex, form.getSampleTypeColumn());
+            Integer sourceIdx = getColumnIndex(columnIndex, form.getSourceColumn());
+            Integer collectionDateIdx = getColumnIndex(columnIndex, form.getCollectionDateColumn());
+            Integer receptionDateTimeIdx = getColumnIndex(columnIndex, form.getReceptionDateTimeColumn());
+
+            // Optional reception metadata indices
+            Integer projectStudyAssociationIdx = getColumnIndex(columnIndex, form.getProjectStudyAssociationColumn());
+            Integer volumeConcentrationIdx = getColumnIndex(columnIndex, form.getVolumeConcentrationColumn());
+            Integer a260_280Idx = getColumnIndex(columnIndex, form.getA260_280Column());
+            Integer a260_230Idx = getColumnIndex(columnIndex, form.getA260_230Column());
+            Integer rinIdx = getColumnIndex(columnIndex, form.getRinColumn());
+
+            // Optional processing metadata indices
+            Integer extractionMethodKitIdx = getColumnIndex(columnIndex, form.getExtractionMethodKitColumn());
+            Integer pcrProtocolIdx = getColumnIndex(columnIndex, form.getPcrProtocolColumn());
+            Integer libraryPrepProtocolIdx = getColumnIndex(columnIndex, form.getLibraryPrepProtocolColumn());
+            Integer sequencingPlatformIdx = getColumnIndex(columnIndex, form.getSequencingPlatformColumn());
+            Integer runIdIdx = getColumnIndex(columnIndex, form.getRunIdColumn());
+            Integer operatorIdx = getColumnIndex(columnIndex, form.getOperatorColumn());
+            Integer processingDateTimeIdx = getColumnIndex(columnIndex, form.getProcessingDateTimeColumn());
+            Integer notesIdx = getColumnIndex(columnIndex, form.getNotesColumn());
+
+            String line;
+            int rowNumber = 1; // header line
             while ((line = reader.readLine()) != null) {
                 rowNumber++;
-
-                if (isHeaderRow) {
-                    isHeaderRow = false;
-                    continue; // Skip header row
-                }
-
-                if (line.trim().isEmpty()) {
-                    continue; // Skip empty lines
+                if (line.isBlank()) {
+                    continue;
                 }
 
                 try {
-                    ManifestRow row = parseRowFromCsv(line, rowNumber, form);
+                    String[] fields = parseCSVLine(line);
+
+                    String sampleId = getFieldValue(fields, sampleIdIdx);
+                    String sampleType = getFieldValue(fields, sampleTypeIdx);
+                    String source = getFieldValue(fields, sourceIdx);
+                    String collectionDate = getFieldValue(fields, collectionDateIdx);
+                    String receptionDateTime = getFieldValue(fields, receptionDateTimeIdx);
+                    String projectStudyAssociation = getFieldValue(fields, projectStudyAssociationIdx);
+                    String volumeConcentration = getFieldValue(fields, volumeConcentrationIdx);
+                    String a260_280 = getFieldValue(fields, a260_280Idx);
+                    String a260_230 = getFieldValue(fields, a260_230Idx);
+                    String rin = getFieldValue(fields, rinIdx);
+                    String extractionMethodKit = getFieldValue(fields, extractionMethodKitIdx);
+                    String pcrProtocol = getFieldValue(fields, pcrProtocolIdx);
+                    String libraryPrepProtocol = getFieldValue(fields, libraryPrepProtocolIdx);
+                    String sequencingPlatform = getFieldValue(fields, sequencingPlatformIdx);
+                    String runId = getFieldValue(fields, runIdIdx);
+                    String operator = getFieldValue(fields, operatorIdx);
+                    String processingDateTime = getFieldValue(fields, processingDateTimeIdx);
+                    String notes = getFieldValue(fields, notesIdx);
+
+                    ManifestRow row = new ManifestRow(rowNumber, sampleId, sampleType, source, collectionDate,
+                        receptionDateTime, projectStudyAssociation, volumeConcentration, a260_280, a260_230,
+                        rin, extractionMethodKit, pcrProtocol, libraryPrepProtocol, sequencingPlatform,
+                        runId, operator, processingDateTime, notes);
+
                     rows.add(row);
                 } catch (Exception e) {
                     errors.add(new ParseError(rowNumber, "row", "Failed to parse row: " + e.getMessage()));
@@ -177,7 +248,7 @@ public class VirologyLabManifestImportServiceImpl implements VirologyLabManifest
                 return o1.compareTo(o2);
             });
             if (!pages.isEmpty()) {
-                firstPageId = pages.get(0).getId();
+                firstPageId = pages.getFirst().getId();
             }
         }
 
@@ -240,46 +311,41 @@ public class VirologyLabManifestImportServiceImpl implements VirologyLabManifest
             createdSampleIds, errors);
     }
 
-    private ManifestRow parseRowFromCsv(String line, int rowNumber, VirologyLabManifestImportForm form) {
-        String[] columns = line.split(",", -1);
-        Map<String, String> columnMap = new HashMap<>();
+    private String[] parseCSVLine(String line) {
+        List<String> result = new ArrayList<>();
+        StringBuilder current = new StringBuilder();
+        boolean inQuotes = false;
 
-        // Map columns based on form configuration
-        if (form.getSampleIdColumn() != null && !form.getSampleIdColumn().isEmpty()) {
-            columnMap.put("sampleId", getColumnValue(columns, form.getSampleIdColumn()));
-        }
-        if (form.getSampleTypeColumn() != null && !form.getSampleTypeColumn().isEmpty()) {
-            columnMap.put("sampleType", getColumnValue(columns, form.getSampleTypeColumn()));
-        }
-        // Add other column mappings as needed...
+        for (int i = 0; i < line.length(); i++) {
+            char c = line.charAt(i);
 
-        return new ManifestRow(
-            rowNumber,
-            columnMap.getOrDefault("sampleId", ""),
-            columnMap.getOrDefault("sampleType", ""),
-            columnMap.getOrDefault("source", ""),
-            columnMap.getOrDefault("collectionDate", ""),
-            columnMap.getOrDefault("receptionDateTime", ""),
-            columnMap.getOrDefault("projectStudyAssociation", ""),
-            columnMap.getOrDefault("volumeConcentration", ""),
-            columnMap.getOrDefault("a260_280", ""),
-            columnMap.getOrDefault("a260_230", ""),
-            columnMap.getOrDefault("rin", ""),
-            columnMap.getOrDefault("extractionMethodKit", ""),
-            columnMap.getOrDefault("pcrProtocol", ""),
-            columnMap.getOrDefault("libraryPrepProtocol", ""),
-            columnMap.getOrDefault("sequencingPlatform", ""),
-            columnMap.getOrDefault("runId", ""),
-            columnMap.getOrDefault("operator", ""),
-            columnMap.getOrDefault("processingDateTime", ""),
-            columnMap.getOrDefault("notes", "")
-        );
+            if (c == '"') {
+                inQuotes = !inQuotes;
+            } else if (c == ',' && !inQuotes) {
+                result.add(current.toString().trim());
+                current = new StringBuilder();
+            } else {
+                current.append(c);
+            }
+        }
+
+        result.add(current.toString().trim());
+        return result.toArray(new String[0]);
     }
 
-    private String getColumnValue(String[] columns, String columnName) {
-        // This is a simplified implementation
-        // In practice, you'd map column names to indices
-        return columns.length > 0 ? columns[0].trim().replace("\"", "") : "";
+    private Integer getColumnIndex(Map<String, Integer> columnIndex, String columnName) {
+        if (columnName == null || columnName.isBlank()) {
+            return null;
+        }
+        return columnIndex.get(columnName.toLowerCase());
+    }
+
+    private String getFieldValue(String[] fields, Integer index) {
+        if (index == null || index >= fields.length) {
+            return null;
+        }
+        String value = fields[index].trim();
+        return value.isBlank() ? null : value;
     }
 
     private void validateRequiredFields(ManifestRow row, List<ParseError> errors) {
@@ -302,7 +368,8 @@ public class VirologyLabManifestImportServiceImpl implements VirologyLabManifest
 
     private void validateSampleType(ManifestRow row, List<ParseError> errors) {
         if (row.sampleType() != null && !row.sampleType().trim().isEmpty()) {
-            if (!VALID_VIROLOGY_SAMPLE_TYPES.contains(row.sampleType().trim())) {
+            String sampleType = row.sampleType().trim().toLowerCase();
+            if (!VALID_VIROLOGY_SAMPLE_TYPES.contains(sampleType)) {
                 errors.add(new ParseError(row.rowNumber(), "sampleType",
                     "Invalid sample type: " + row.sampleType() + ". Must be one of: " + VALID_VIROLOGY_SAMPLE_TYPES));
             }
